# LLM

./: .current_work.md  .gitignore  .gitleaksignore  .jscpd.json  .nano_bind_backfill_prompt.md  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  :memory:-shm  :memory:-wal  AGENTS.md  AGENT_COMMUNICATION.md  ARIA_DESIGNER_8_ISSUES_PLAN.md  ARIA_DESIGNER_WORKFLOW_PLAN.md  ARIA_NEXT_GEN_ARCHITECTURE.md  ARIA_UI_UX_PLAN.md  BUG_AND_SCORING_FIXES.md  CANONICAL_COMPONENT_UNIFICATION_MULTI_AGENT_PLAN.md  CHAMPION_EXHAUSTIVE_ABLATION_PLAN_20260429.md  CLAUDE.md  CLAUDE_RESUME_BRIEF.md  CLEANUP_TODO.md  CODEX_HANDOFF_20260430_ABLATION.md  DRY_HIGH_PERF_TODO.md  FIX_PLAN_OP_WEIGHT_DISCONNECT.md  GEMINI_DEEP_THINKING_SUMMARY.md  GRAPH_ASSEMBLY_OBSERVATIONS.md  JUDGMENT_ENGINE_PHASE0_1_REVIEW.md  JUDGMENT_ENGINE_PLAN.md  KOLMOGOROV_MDL_RESEARCH.md  LATENT_GEOMETRY_RESEARCH.md  MASTER_README.md  MULTI_AGENT_PLAN.md  Makefile  OBSERVABILITY_PLAN.md  PERF_OPTIMIZATION_PLAN.md  PROBE_CALIBRATION_2026-04-17.md  PROFILE_RESULTS.md  PYTEST_AGENT_STRATEGY.md  README.md  (+38 more)
.claude/: settings.json
.codex/: config.toml  hooks.json
.playwright-mcp/: page-2026-05-11T01-40-15-041Z.yml
archive/: 2026-03-13_op_pairs.csv
aria-core/: Makefile  setup.py
aria-designer/: .current_plan.archive.md  .current_plan.md  .gitignore  .pre-commit-config.yaml  ARIA_PERSONA.md  CLAUDE.md  README.md  WORKFLOW_GUIDE.md  package-lock.json  requirements-test.txt
aria_core/: CLAUDE.md  README.md  __init__.py  _bootstrap.py  bench_cumsum.py  get_novelty.py  get_novelty2.py  get_novelty3.py  get_novelty4.py  setup.py  test_cka.py  test_cka_artifact.py  test_cka_artifact_2.py  test_cka_fixed.py  test_cka_generic.py  test_cka_trained.py
aria_designer/: .current_plan.md  .gitignore  CLAUDE.md  Makefile  README.md  WORKFLOW_GUIDE.md  __init__.py  component_identity.py  package-lock.json  pytest.ini
aria_designer/runtime/tests/: CMakeLists.txt  test_compiler.py  test_dispatch.py  test_importer.py  test_kernels.cpp  test_runtime.cpp
artifacts/: component_context_rules.json  low_s1_before_after.json  low_s1_before_after.md  low_s1_components.json  low_s1_fresh_reruns.md  low_s1_root_cause_audit.csv
audit/: .gitignore
audits/: 01_alias_taxonomy_cleanup.md  02_routing_and_intelligence_reality.md  03_byte_mode_and_sequence_safety.md  04_trusted_core_and_ban_freeze.md  05_validation_and_instrumentation_plan.md
cleanup_20260426/: git_status_before_cleanup.txt
component_fab/: README.md  __init__.py  math_knobs.py
conductor/: ai_remediation_plan.md  ai_remediation_policy.md  ai_triage.py  build_ai_bundle.py  check_duplicate_function_bodies.py  check_json_in_notes.py  check_protected_deletes.py  check_root_junk.py  codex_journal.py  github_feedback.py  guardrail_allowlist.json  guardrail_audit.py  monitoring-system-plan.md  notebooklm_bundle.py  profile_hotpaths.py  radon_complexity.py  radon_complexity_baseline.json  run_duplicate_audit.py
logs/: aria_api.out  dashboard.out  dashboard_restart.out  dashboard_restart_final.out  dashboard_restart_real_final.out  dashboard_restart_v2.out  dashboard_restart_v3.out
rescore_artifacts/: rescore_audit_wikitext_rescore_v1_1773448241.json  rescore_audit_wikitext_rescore_v1_1773448253.json  rescore_audit_wikitext_rescore_v1_1773448478.json  rescore_audit_wikitext_rescore_v2_1773449851.json  rescore_audit_wikitext_rescore_v2_1773449870.json
research/: .current_work.md  .current_work_archive.md  .gitignore  :memory:-shm  :memory:-wal  ARCHITECTURE_IMPROVEMENTS.md  BASELINE_SCORING_DO_NOT_DELETE.md  CHANGES.md  CLAUDE.md  CUTOVER_REMOVAL_PLAN.md  FAILED_TEST_PLAN.md  GOD_FILE_SPLIT_PLAN.md  HYDRA_PLAN.md  NATIVE_ACCELERATION_PACKAGES.md  NATIVE_RUNNER_PLAN.md  NATIVE_RUNNER_PLAN_ARCHIVE.md  PERF_FINDINGS.md  PIPELINE_UPGRADE_PLAN.md  README.md  REFERENCE_ARCH_PLAN.md  TEMPLATE_AUDIT.md  TEMPLATE_OPTIMIZATION_PLAYBOOK.md  __init__.py  __main__.py  _native_runtime.py  arch_builder.py  arch_builder_config.py  aria_dashboard.log.1  backfill_dual_metrics.py  copilot.md  database.py  db_split_manifest.md  debug_live_feed.py  defaults.py  env.py  evaluator.py  explorer.py  frontier_kernel.py  lab_notebook.db-shm  lab_notebook.db-wal  (+13 more)
research/runtime/native/: CMakeLists.txt  Makefile  REUSE_CONTRACT.md  intelligent_router_proto.md  ir_validator.py  torch_extension_loader.py
research/runtime/native/bench/: bench_e2e.py  bench_frontier_kernel.py  bench_kernels.py
research/runtime/native/build_current/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
research/runtime/native/cython/: aria_bridge.c  aria_bridge.pyx  aria_bridge_additions.pyx  aria_bridge_patch.py  aria_kernels.pxd  fix_dispatchers.py  fix_dispatchers2.py  patch_recompute.py  setup.py
research/runtime/native/include/: cblas.h  graph_analysis.h  intelligent_router_abi.h  kernel_abi.h  nsga_metrics.h  profile_abi.h  runner_abi.h  search_metrics.h
research/runtime/native/include/intelligent_router/: router_distilled.hpp  router_distilled_impl.inc  sparse_hybrid_router.hpp  sparse_hybrid_router_impl.inc
research/runtime/native/rust/aria-db/: Cargo.toml
research/runtime/native/rust/aria-db/src/: lib.rs
research/runtime/native/rust/aria-scheduler/: Cargo.toml  build.rs  pyproject.toml
research/runtime/native/rust/aria-scheduler/src/: arena.rs  corpus.rs  error.rs  executor.rs  ffi.rs  graph.rs  intelligence.rs  lib.rs  notebook_graph.rs  python_bridge.rs  template_selection.rs
research/runtime/native/src/: dim_flow_flags.c  graph_analysis.c  intelligent_router_abi.cpp  intelligent_router_router_distilled.cpp  intelligent_router_sparse_hybrid_router.cpp  kernels_ext.c  kernels_ext.h  nsga_metrics.c  param_formula.c  profiler.c  profiler.h  registry.c  registry.h  runner_abi.c  search_metrics.c
research/runtime/native/tests/: test_kernels.c  test_profiler.c
scripts/: check-ui-standards.js  profile_train.sh
tasks/: controlled_lang_nano_bind_funnel_2026-05-06.md  fab_novel_math_expansion_plan.md  fingerprint_audit_plan.md  fix_category1_diff_attention_gated_delta.md  lessons.md  (+23 more)
(+4172 files in other folders)
