[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "flask-cors>=6.0.0",
  "lightgbm>=4.6.0",
  "ninja>=1.11.1",
  "pyyaml>=6.0",
  "xxhash>=3.0.0",
  "zstandard>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["research", "aria_designer"]

[dependency-groups]
dev = ["pytest-testmon>=2.2.0", "scalene>=2.2.1"]
