[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "flask-cors>=6.0.0",
  "lightgbm>=4.6.0",
  "ninja>=1.11.1",
  "pyyaml>=6.0",
  "xxhash>=3.0.0",
  "zstandard>=0.23.0",
]

[project.optional-dependencies]
component-fab = [
  "fastapi>=0.115",
  "numpy>=1.26",
  "torch>=2.2",
  "uvicorn>=0.29",
]
component-fab-test = [
  "httpx>=0.27",
  "pytest>=8.0",
]
component-fab-dev = [
  "radon>=6.0.1",
  "ruff>=0.15.6",
  "pyright>=1.1.409",
  "vulture>=2.14",
  "xenon>=0.9.3",
]

[tool.hatch.build.targets.wheel]
packages = ["research", "aria_designer", "component_fab"]

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "codespell>=2.4.2",
  "detect-secrets>=1.5.0",
  "pip-audit>=2.10.0",
  "pre-commit>=4.6.0",
  "pylint>=4.0.5",
  "pyright>=1.1.409",
  "pytest-testmon>=2.2.0",
  "radon>=6.0.1",
  "scalene>=2.2.1",
  "semgrep>=1.163.0",
  "xenon>=0.9.3",
]
