[package]
name = "aria-scheduler"
version = "0.1.0"
edition = "2021"
description = "Graph execution scheduler for Aria native runner"
build = "build.rs"

[lib]
name = "aria_scheduler"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
python = ["pyo3"]

[package.metadata.maturin]
bindings = "pyo3"
features = ["python"]
