[package]
name = "aria-scheduler"
version = "0.1.0"
edition = "2021"
description = "Graph execution scheduler for Aria native runner"
build = "build.rs"

[lib]
name = "aria_scheduler"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
rand = "0.8"
zstd = "0.13"

[features]
default = []
python = ["pyo3", "numpy"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[package.metadata.maturin]
bindings = "pyo3"
features = ["python"]
